istio/01-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: nginx-default-gateway-deployment
    meta.helm.sh/release-namespace: playground
  creationTimestamp: "2023-03-26T16:16:13Z"
  generation: 1
  labels:
    app: nginx-default-gateway-deployment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-default-gateway-deployment
    app.kubernetes.io/version: 1.17.1
    helm.sh/chart: gateway-1.17.1
    istio: nginx-default-gateway-deployment
  name: nginx-default-gateway-deployment
  namespace: playground
  resourceVersion: "583373"
  uid: 69354c4f-f0ee-4d00-800d-1bc9f8d0b9dd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-default-gateway-deployment
      istio: nginx-default-gateway-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: nginx-default-gateway-deployment
        istio: nginx-default-gateway-deployment
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: auto
        imagePullPolicy: Always
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1337
          runAsNonRoot: true
          runAsUser: 1337
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      serviceAccount: nginx-default-gateway-deployment
      serviceAccountName: nginx-default-gateway-deployment
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-03-26T16:20:34Z"
    lastUpdateTime: "2023-03-26T16:20:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-03-26T16:16:15Z"
    lastUpdateTime: "2023-03-26T16:20:34Z"
    message: ReplicaSet "nginx-default-gateway-deployment-5d9f57985f" has successfully
      progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
