istio/03-virtual-service.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: playground
  name: nginx-deploy
  labels:
    kiali_wizard: request_routing
spec:
  http:
    - route:
        - destination:
            host: nginx-deploy.playground.svc.cluster.local
            subset: v1-0
          weight: 0
        - destination:
            host: nginx-deploy.playground.svc.cluster.local
            subset: v2-0
          weight: 100
  hosts:
    - nginx-deploy.playground.svc.cluster.local
  gateways: ~
