istio/04-destination-rule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: playground
  name: nginx-deploy
  labels:
    kiali_wizard: request_routing
  annotations: ~
spec:
  host: nginx-deploy.playground.svc.cluster.local
  subsets:
    - name: v1-0
      labels:
        version: v1-0
    - name: v2-0
      labels:
        version: v2-0
  trafficPolicy: ~
